gateway-api/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: gateway-test
spec: {}
status: {}
