gateway-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gateway-api-test
  name: gateway-api-test
  namespace: gateway-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-api-test
  template:
    metadata:
      labels:
        app: gateway-api-test
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
