gateway-api/svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: my-gateway
  name: my-gateway
  namespace: my-gateway
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: my-gateway
  type: ClusterIP
status:
  loadBalancer: {}
